# aoc2023

./: .gitignore  .hlint.yaml  README.md  aoc2023.cabal  flake.nix  justfile  out
lib/: AocParse.hs  AocPoint.hs  Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day6.hs  Day7.hs  Day8.hs  SortedList.hs
lib/Day2/: Types.hs
lib/Day8/: Helpers.hs
src/: Main.hs
